@@ -16,6 +16,14 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.24
+**Add pinging the server. This is used to determine current user count. (NO DATA IS SENT)**
+Hopefully fix some issues with the plugin installers.
+Migrate the Main Menu to be a panel, instead of being hard coded.
+Added an MOTD to the Main Menu.
+(devs) add control of line height to empty lines
+
+[!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="App Backend"] [!badge variant="ghost" text="Main Menu"]
 ==- Version 1.10.23
 The app can now automatically scale based on the windows scaling setting. This can be toggled on/off from settings -> ui settings.
 Added the ability to unlock the resizing in windows, *this is not intended to be used*. The UI might break if you use this. But it is now included for the sake of completeness.
