@@ -1,0 +1,17 @@
+---
+authors: 
+  - name: Tumppi066
+    link: https://github.com/Tumppi066
+    avatar: https://avatars.githubusercontent.com/u/83072683?v=4
+date: 2024-2-23
+icon: stack
+tags:
+  - panel
+---
+
+# MainMenu
+### Description
+The main menu of the app.
+
+### Installation
+This plugin won't install anything.
