@@ -23,6 +23,7 @@ import src.settings as settings
 from src.translator import Translate
 import plugins.ThemeSelector.main as themeSelector
 from tktooltip import ToolTip
+import src.server as server
 
 root = None
 """The root tk.Tk() window of the program."""
@@ -187,7 +188,6 @@ def drawButtons(refresh:bool=False):
         refresh (bool, optional): Will create the root again. Defaults to False.
     """
     global enableButton
-    global themeButton
     
     if refresh or pluginFrames == []:
         CreateRoot()
@@ -201,47 +201,6 @@ def drawButtons(refresh:bool=False):
     for child in buttonFrame.winfo_children():
         child.destroy()
     
-    try:
-        # Make a label to offset the text and buttons to the center of the frame
-        helpers.MakeLabel(pluginFrames[0], "                      ", 0, 0, autoplace=True)
-        helpers.defaultAutoplaceColumn = 1
-        helpers.MakeLabel(pluginFrames[0], f"You are running ETS2LA version {str(variables.VERSION)}", 0, 1, columnspan=2, font=("Roboto", 18, "bold"), autoplace=True)
-        # date text, month, date, time, year
-        try:
-            updateTime = str(variables.LASTUPDATE).split(" ")
-            updateTime = updateTime[1:]
-            months = {"Jan": 1, "Feb": 2, "Mar": 3, "Apr": 4, "May": 5, "June": 6, "July": 7, "Aug": 8, "Sep": 9, "Oct":10, "Nov": 11, "Dec": 12}
-            updateTime[0] = months[updateTime[0]]
-            updateText = f"{updateTime[1]}.{updateTime[0]}.{updateTime[3]} - {updateTime[2]} "
-        except:
-            updateText = "-- Unknown --"
-        helpers.MakeLabel(pluginFrames[0], f"Released {updateText}", 0, 1, columnspan=2, pady=0, autoplace=True)
-        
-        if variables.UPDATEAVAILABLE != False:
-            helpers.MakeLabel(pluginFrames[0], "An update is available!", 0, 1, columnspan=2, fg="green", autoplace=True, tooltip=f"New version: {'.'.join(variables.UPDATEAVAILABLE)}\nRestart to update.")
-        else: 
-            helpers.MakeEmptyLine(pluginFrames[0], 0, 1, columnspan=2, autoplace=True)
-            
-        helpers.MakeButton(pluginFrames[0], "Panel Manager", lambda: switchSelectedPlugin("plugins.PanelManager.main"), 0, 1, width=20, autoplace=True)
-        helpers.MakeButton(pluginFrames[0], "Plugin Manager", lambda: switchSelectedPlugin("plugins.PluginManager.main"), 0, 2, width=20, autoplace=True)
-        helpers.MakeButton(pluginFrames[0], "First Time Setup", lambda: switchSelectedPlugin("plugins.FirstTimeSetup.main"), 0, 1, width=20, style="Accent.TButton", autoplace=True)
-        helpers.MakeButton(pluginFrames[0], "LANGUAGE - 语言设置", lambda: switchSelectedPlugin("plugins.DeepTranslator.main"), 0, 2, width=20, style="Accent.TButton", translate=False, autoplace=True)
-        helpers.MakeButton(pluginFrames[0], "Video Tutorial ↗ ", lambda: helpers.OpenInBrowser("https://www.youtube.com/watch?v=0pic0rzjvik"), 0, 1, width=20, autoplace=True, tooltip="https://www.youtube.com/watch?v=0pic0rzjvik")
-        helpers.MakeButton(pluginFrames[0], "ETS2LA Wiki ↗ ", lambda: helpers.OpenInBrowser("https://wiki.tumppi066.fi/en/LaneAssist"), 0, 2, width=20, autoplace=True, tooltip="https://wiki.tumppi066.fi/en/LaneAssist")
-        helpers.MakeEmptyLine(pluginFrames[0], 0, 1, columnspan=2, autoplace=True)
-        helpers.MakeLabel(pluginFrames[0], "You can use F5 to refresh the UI and come back to this page.\n                    (as long as the app is disabled)", 0, 1, columnspan=2, autoplace=True)
-        helpers.MakeLabel(pluginFrames[0], "The top of the app has all your currently open tabs.\n They can be closed with the middle mouse button.\n        (or right mouse button if so configured)", 0, 1, columnspan=2, autoplace=True)
-        # Make a label to show if crash reporting is enabled or disabled
-        crashReporting = settings.GetSettings("CrashReporter", "AllowCrashReports")
-        if crashReporting != None:
-            if crashReporting:
-                helpers.MakeLabel(pluginFrames[0], "Crash reporting is enabled.", 0, 1, columnspan=2, fg="green", autoplace=True, tooltip="You can disable it in the settings if you so desire.")
-            else:
-                helpers.MakeLabel(pluginFrames[0], "Crash reporting is disabled.", 0, 1, columnspan=2, fg="red", autoplace=True, tooltip="You can enable it in the settings.")
-    except:
-        import traceback
-        traceback.print_exc()
-        pass
     enableButton = helpers.MakeButton(buttonFrame, "Enable", lambda: (variables.ToggleEnable(), enableButton.config(text=("Disable" if variables.ENABLELOOP else "Enable"))), 0, 0, width=11, padx=9, style="Accent.TButton")
     helpers.MakeButton(buttonFrame, "Panels", lambda: switchSelectedPlugin("plugins.PanelManager.main"), 1, 0, width=11, padx=9)
     helpers.MakeButton(buttonFrame, "Plugins", lambda: switchSelectedPlugin("plugins.PluginManager.main"), 2, 0, width=11, padx=9)
@@ -284,6 +243,14 @@ def update(data:dict):
             print("Currently open panel does not have an update method. Please add one.")
         elif "name 'ui' is not defined" not in str(ex):
             print(str(ex))
+        pass
+
+    # Check if no tabs are open
+    try:
+        if pluginNotebook.index("end") == 0:
+            # Open the mainmenu
+            switchSelectedPlugin("plugins.MainMenu.main")
+    except:
         pass
 
     try:
@@ -469,14 +436,6 @@ def CreateRoot():
     pluginNotebook = ttk.Notebook(root, width=width, height=height-20)
     pluginNotebook.pack_propagate(0)
     pluginNotebook.grid_propagate(0)
-
-    # Create the page for the main menu
-    pluginFrame = ttk.Frame(pluginNotebook)
-    pluginFrames = []
-    UIs = []
-    pluginFrames.append(pluginFrame)
-    UIs.append(None)
-    pluginNotebook.add(pluginFrame, text="Main Menu")
     
     pluginNotebook.pack(side="left", anchor="n", padx=10, pady=10)
     
