@@ -4,6 +4,7 @@ import json
 import src.settings as settings 
 from src.translator import Translate
 import src.variables as var
+from src.logger import print
 
 ALLOW_CRASH_REPORTS = settings.GetSettings("CrashReporter", "AllowCrashReports")
 """Whether or not crash reports are allowed to be sent to the developers. This will help us fix bugs faster. Defaults to False."""
@@ -55,7 +56,7 @@ def SendCrashReport(type:str, message:str, additional=None):
             try:
                 response = requests.post(url, headers=headers, data=data)
             except:
-                print("Caould not connect to server to send crash report.")
+                print("Could not connect to server to send crash report.")
             return response.status_code == 200
         else:
             print("Crash detected, but crash reports are not allowed to be sent.")
@@ -63,3 +64,46 @@ def SendCrashReport(type:str, message:str, additional=None):
         import traceback
         traceback.print_exc()
         print("Crash report sending failed.")
+
+def GetMotd():
+    """Get the message of the day from the main application server. This will be shown to the user when the app is opened.
+
+    Returns:
+        str: Message of the day
+    """
+    
+    if not ALLOW_CRASH_REPORTS:
+        return "Please enable crash reporting to fetch MOTD."
+    
+    try:
+        url = 'https://crash.tumppi066.fi/motd'
+        response = json.loads(requests.get(url).text)
+        return response["motd"]
+    except:
+        return "Could not get server message."
+    
+def GetUserCount():
+    """Get the amount of users using the app. This will be shown to the user when the app is opened.
+
+    Returns:
+        str: User count
+    """
+    
+    if not ALLOW_CRASH_REPORTS:
+        return "Please enable crash reporting to fetch user count."
+    
+    try:
+        url = 'https://crash.tumppi066.fi/usercount'
+        response = json.loads(requests.get(url).text)
+        return response["usercount"]
+    except:
+        return "Could not get user count."
+    
+def Ping():
+    """Will send a ping to the server, doesn't send any data."""
+    try:
+        url = 'https://crash.tumppi066.fi/ping'
+        requests.get(url)
+        print("Ping!")
+    except:
+        pass
