@@ -1,1 +1,1 @@
-1.10.23
+1.10.24
