@@ -1,1 +1,5 @@
-The MSS Screen Capture now works for all plugins. BetterCamScreenCapture is still recommended and MSS is only a backup.
+Hopefully fix some issues with the plugin installers.
+Migrate the Main Menu to be a panel, instead of being hard coded.
+Added an MOTD to the Main Menu.
+Add pinging the server. This is used to determine current user count. (NO DATA IS SENT)
+(devs) add control of line height to empty lines
